syntax = "proto3";

option csharp_namespace = "Test.WASMClient";

package people;

import "google/protobuf/empty.proto";

service People {
    rpc GetPeople (google.protobuf.Empty) returns (PeopleResponse);
    rpc GetPeopleServerStream (google.protobuf.Empty) returns (stream Person);
    rpc GetPeopleClientStream (stream StreamerClientRequest) returns (PeopleResponse);
    rpc GetPeopleStreamers (stream StreamerClientRequest) returns (stream Person);
}

message PeopleResponse {
    repeated Person people = 1;
}

message Person {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
}

message StreamerClientRequest {
    int32 start = 1;
}